database: improving concurrency problems