@@ -123,6 +123,7 @@
                         -Dfile.encoding=UTF-8
                         -Dstdout.encoding=UTF-8
                         -Dstderr.encoding=UTF-8
+                        -Dnet.bytebuddy.experimental=true
                     </argLine>
                     <systemPropertyVariables>
                         <TESTCONTAINERS_RYUK_DISABLED>false</TESTCONTAINERS_RYUK_DISABLED>
@@ -149,6 +150,7 @@
                         --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
                         -Dfile.encoding=UTF-8
+                        -Dnet.bytebuddy.experimental=true
                     </argLine>
                     <systemPropertyVariables>
                         <TESTCONTAINERS_RYUK_DISABLED>false</TESTCONTAINERS_RYUK_DISABLED>
